--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        
+        <meta http-equiv="refresh" content="0; URL='https://zonadeestudio.com'" />
         <title>MATH++</title>
         <link rel="shortcut icon" type="image/x-icon" href="images/logo.png" >
 		<link rel="stylesheet" type="text/css" href="css/estilos.css">
